packages/css/markprompt.css
/* ... */
:where(.MarkpromptAnswer hr + *) {
  margin-top: 0;
}

:where(.MarkpromptAnswer h2 + *) {
  margin-top: 0;
}

:where(.MarkpromptAnswer h3 + *) {
  margin-top: 0;
}

:where(.MarkpromptAnswer h4 + *) {
  margin-top: 0;
}

:where(.MarkpromptAnswer thead th:first-child) {
  padding-left: 0;
}

:where(.MarkpromptAnswer thead th:last-child) {
  padding-right: 0;
}

:where(.MarkpromptAnswer tbody t)d,
:where(.MarkpromptAnswer tfoot td) {
  padding-top: 0.6666667em;
  padding-right: 1em;
  padding-bottom: 0.6666667em;
  padding-left: 1em;
}

:where(.MarkpromptAnswer tbody td:first-chil)d,
:where(.MarkpromptAnswer tfoot td:first-child) {
  padding-left: 0;
}

:where(.MarkpromptAnswer tbody td:last-chil)d,
:where(.MarkpromptAnswer tfoot td:last-child) {
  padding-right: 0;
}

:where(.MarkpromptCaret) {
  display: none;
  height: 1em;
  width: 0.8ch;
  margin-top: 1.1428571em;
  margin-left: 0.2rem;
  transform: translate(2px, 2px);
  border-radius: 1px;
  background-color: var(--markprompt-primary);
  box-shadow: 0 0 3px 0 var(--markprompt-primary);
  animation-name: markprompt-fade-out;
  animation-duration: 1000ms;
  animation-fill-mode: both;
  animation-iteration-count: infinite;
  transition-timing-function: cubic-bezier(0.14, 0, 0.16, 1);
}

:where([data-loading-state='preload'] .MarkpromptCaret) {
  display: inline-block;
}

:where([data-loading-state='preload'] .MarkpromptProgress) {
  position: absolute;
  top: -1px;
  left: 0;
  height: 3px;
  background-image: linear-gradient(
    to right,
    var(--markprompt-primaryHighlight),
    var(--markprompt-secondaryHighlight)
  );
  animation-name: markprompt-progress;
  animation-duration: 2s;
  animation-fill-mode: none;
  animation-iteration-count: infinite;
  transition-timing-function: cubic-bezier(0.14, 0, 0.16, 1);
  transition: opacity 200ms ease;
}

:where([data-loading-state='preload'] .MarkpromptProgress) {
  opacity: 1;
}

:where(
    [data-loading-state]:not([data-loading-state='preload']) .MarkpromptProgress
  ) {
  opacity: 0;
}

:where(.MarkpromptReferences) {
  position: relative;
  padding-top: 1rem;
  padding-inline: 2rem;
  background-color: var(--markprompt-muted);
  border-top: 1px solid var(--markprompt-border);
  font-size: 0.75rem;
  color: var(--markprompt-mutedForeground);
  transition: height 500ms ease;
  transform: translateY(100%);
  opacity: 0;
  animation: markprompt-popup 200ms ease-out forwards;
  overflow: hidden;
  box-sizing: border-box;
  flex: none;
}

:where(.MarkpromptReferences[data-loading-state='preload']) {
  height: 50px;
}

:where(
    .MarkpromptReferences[data-loading-state='streaming-answer'],
    .MarkpromptReferences[data-loading-state='done']
  ) {
  height: 95px;
}

:where(.MarkpromptReferences[data-loading-state='indeterminate']) {
  display: none;
  height: 0;
}

:where(.MarkpromptReferences p) {
  animation: markprompt-fade-in 500ms ease-out forwards 1;
  font-weight: 600;
  margin: 0;
}

:where(.MarkpromptReferences ul) {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  align-items: center;
  gap: 0.5rem;
  padding-left: 0;
  padding-bottom: 20px;
  list-style-type: none;
  overflow-x: auto;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

:where(.MarkpromptReferences ul::-webkit-scrollbar) {
  display: none;
}

:where(.MarkpromptReference) {
  font-size: 0.875rem;
  line-height: 1.5rem;
  animation-name: markprompt-slide-up;
  animation-duration: 1s;
  animation-fill-mode: both;
  transition-timing-function: ease-in-out;
}

:where(.MarkpromptReference a) {
  display: inline-block;
  text-decoration: none;
  padding: 0.125rem 0.5rem;
  border: 1px solid var(--markprompt-border);
  border-radius: 0.375rem;
  color: var(--markprompt-primary);
  font-weight: 500;
  transition-property: opacity;
  transition-duration: 200ms;
  white-space: nowrap;
}

:where(.MarkpromptReference a:hover) {
  opacity: 0.8;
}

:where(.MarkpromptBackButton) {
  font-size: var(--markprompt-text-size);
  background-color: var(--markprompt-muted);
  color: var(--markprompt-primary);
  border-bottom: 1px solid var(--markprompt-border);
  display: flex;
  flex: none;
  align-items: center;
  font-weight: 500;
  padding: 0.5rem 1rem;
  gap: 0.25rem;
  cursor: pointer;
  border-top: none;
  border-left: none;
  border-right: none;
  width: 100%;
  outline: none;
}

:where(.MarkpromptBackButton span:first-child) {
  display: flex;
  align-items: center;
}

:where(.MarkpromptBackButton span:last-child) {
  display: flex;
  align-items: center;
  font-weight: 500;
}

:where(.MarkpromptSearchResultsContainer) {
  padding: 0.5rem;
  overflow-y: auto;
  display: flex;
  flex-direction: column;
}

:where(.MarkpromptSearchAnswerButton) {
  display: block;
  box-sizing: border-box;
  border-radius: 0.5rem;
  padding: 0.5rem 1rem;
  background-color: var(--markprompt-muted);
  font-size: var(--markprompt-text-size);
  display: flex;
  align-items: center;
  gap: 1rem;
  cursor: pointer;
  width: 100%;
  border: none;
  outline: none;
}

:where(.MarkpromptSearchAnswerButton:hover) {
  background-color: var(--markprompt-muted);
}

:where(.MarkpromptSearchAnswerButton:focus) {
  background-color: var(--markprompt-primary);
}

:where(.MarkpromptSearchAnswerButton:focus .MarkpromptSearchIcon) {
  color: var(--markprompt-foreground);
}

:where(.MarkpromptSearchAnswerButton :last-child) {
  margin-left: auto;
}

:where(.MarkpromptSearchAnswerButton kbd) {
  display: flex;
  align-items: center;
  flex-direction: row;
  gap: 4px;
  color: var(--markprompt-mutedForeground);
}

:where(.MarkpromptKeyboardKey) {
  color: var(--markprompt-mutedForeground);
  stroke-width: var(--markprompt-icon-stroke-width);
  width: calc(var(--markprompt-button-icon-size) * 0.8);
  height: calc(var(--markprompt-button-icon-size) * 0.8);
}

:where(.MarkpromptSearchResults),
:where(.MarkpromptSearchSubResults) {
  list-style-position: inside;
  list-style-type: none;
  margin: 0;
  padding: 0;
}
/* ... */

